Actualizacion lessons en postgre